# ixa-epi-isolation

./: .gitignore  .lintr  .pre-commit-config.yaml  .secrets.baseline  Cargo.toml  Dockerfile  DockerfileR  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: ixa_issues_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: bench-compare.yaml  build-test.yaml  pre-commit.yaml  run-main.yaml
bench/: bench_main.rs
bench/benchmarks/: mod.rs  rate_functions.rs
docs/: 0 contents.md  0_contents.md  clinical_health_status.md  experiments.md  health_status.md  hospitalizations.md  infection.md  initialization.md  intervention-policies.md  intervention.md  model-input.md  natural-history-inputs.md  natural_history_manager.md  quarto-readme.md  reports.md  settings.md  symptom-progression.md  time-varying-infectiousness.md  transmission-modifiers.md  transmission.md  transmission_modifiers.md  viral-load-infectiousness.md
docs/appendix/: time-varying-infectiousness.md
examples/: README  README.md
experiments/: README.md
experiments/docs/: quarto-readme.md
input/: gi_trajectories.csv  input.json  input_benchmark.json  input_simple_SEIR.json  input_simple_SIR.json  input_simple_triangle.json  input_state.json  input_unique_hh_SEIR.json  input_unique_hh_SIR.json  isolation_guidance_stan_parameters.csv  library_asymptomatic_empirical_rate_fns.csv  library_empirical_rate_fns.csv  library_empirical_rate_parameters.csv  library_symptom_parameters.csv  natural_history.csv  people_test.csv  tri_vl_params.csv
scripts/: analyze_transmission_report.R  benchmarking.py  call_abcsmc.py  call_integration_test.py  create_empirical_rate_input.R  create_integration_test_pops.R  create_integration_test_rate_fns.R  create_ode_output.R  create_simple_homog_pop.R  create_synthetic_population.R  functions.R  generate_empirical_rate_fns.R  generate_isolation_guidance_inputs.R  make_ode_and_compare.R  plot_calibration.py  plot_outputs.R  plot_state_outputs.R  run_basic_benchmarks.sh  run_ixa_repeatedly.R  run_ode_plot_comparison.R  run_simulations.py  runtime_benchmarking.py  scenario_abc.py  visualization.py
src/: clinical_status_manager.rs  computed_statistics.rs  contact.rs  facemask_manager.rs  gi_sim.rs  hospital_incidence_report.rs  hospitalizations.rs  immunity_tracker.rs  individual_report.rs  infection_clinical_status_manager.rs  infection_course_manager.rs  infection_manager.rs  infection_propagation_loop.rs  infectiousness_manager.rs  infectiousness_rate.rs  infectiousness_setup.rs  intervention_manager.rs  lib.rs  main.rs  natural_history_manager.rs  natural_history_parameter_manager.rs  natural_history_parameters_manager.rs  parameters.rs  parameters_loader.rs  params.json  periodic_report_population.rs  person_property_report.rs  population_loader.rs  previous_guidance.rs  profiling.rs  property_progression_manager.rs  settings.rs  symptom_progression.rs  transmission_manager.rs  transmission_modifiers.rs  transmission_report.rs  updated_guidance.rs  updated_guidance_interventions.rs  updated_guidance_symptoms.rs  utils.rs
src/infectiousness_rate/: constant_rate.rs  mod.rs
src/interventions/: itinerary_modifier_manager.rs  mod.rs  transmission_modifier_manager.rs
src/policies/: mod.rs  previous_guidance.rs  updated_guidance.rs
src/profiling/: computed_statistic.rs  data.rs  display.rs  file.rs  mod.rs
src/rate_fns/: constant_rate.rs  empirical_rate.rs  mod.rs  rate_fn.rs  rate_fn_storage.rs
src/reports/: incidence_report.rs  mod.rs  prevalence_report.rs  transmission_report.rs
src/utils/: curve_fitting.rs  linear_interpolation.rs  midpoint_integration.rs  mod.rs  numeric_integrators.rs
tests/data/: column_size_changes.csv  empty.csv  empty_transmission_report_test.json  filled_transmission_report_test.json  gi_trajectory.csv  natural_history.csv  one_rate_function.csv  progression_ids_discontiguous.csv  progression_ids_start_at_two.csv  progression_type_mismatch.csv  rate_fn_id_starts_at_two.csv  three_columns.csv  tri_vl_params.csv  tri_vl_params_bad.csv  two_rate_fns.csv  two_rate_fns_discontiguous_ids.csv  two_symptom_data_progressions.csv
tests/integration/: README.md  (+4 more)
(+150 files in other folders)
