[package]
name = "epi-isolation"
version = "0.1.0"
edition = "2021"

[dependencies]
ixa = "0.3.0"
csv = "1.3.1"
tempfile = "3.19.1"
statrs = "0.18.0"
serde = "1.0.217"
serde_json = "1.0.139"
dyn-clone = "1.0.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true
