[package]
name = "epi-isolation"
version = "0.1.0"
edition = "2021"

[features]
default = ["profiling"]

profiling = ["humantime"]

[dependencies]
ixa = "0.3.2"
csv = "1.3.1"
tempfile = "3.19.1"
statrs = "0.18.0"
serde = "1.0.217"
serde_json = "1.0.139"
humantime = { version = "2.1.0", optional = true }
dyn-clone = "1.0.19"
indexmap = "2.11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[lints.rust]
# Turn all rustc warnings into errors
warnings = "deny"

[lints.clippy]
pedantic = { level = "warn", priority = -1}

module_name_repetitions = "allow"
match_wildcard_for_single_variants = "allow"
uninlined_format_args = "allow"
