[tool.poetry]
name = "epi-isolation"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
pre-commit = "^3.7.1"
chaospy = "^4.3.15"
scipy = "^1.14.0"
sobol-seq = "^0.2.0"
seaborn = "^0.13.2"
abctools = {git = "https://github.com/CDCgov/abc-calibration-tools.git"}
abmwrappers = {git = "https://github.com/CDCgov/abm-python-wrappers.git", branch="wtk-viz"}
griddler = {git = "https://github.com/CDCgov/pygriddler.git"}
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
polars = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
