[tool.poetry]
name = "ixa-epi-isolation"
version = "0.1.0"
description = ""
authors = ["Erik Rosenstrom <xui6@cdc.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
argparse = "^1.4.0"
pyaml = "^25.1.0"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
PyYAML = "^6.0.1"
pre-commit = "^3.7.1"
chaospy = "^4.3.15"
scipy = "^1.14.0"
sobol-seq = "^0.2.0"
cfa-azure = {git = "https://github.com/CDCgov/cfa_azure.git"}
abctools = {git = "https://github.com/CDCgov/abc-calibration-tools.git"}
abmwrappers = {git = "https://github.com/CDCgov/abm-python-wrappers.git", branch = "wtk-resuse-distances"}
pertdist = "^0.1.1"
pyarrow = "^17.0.0"
polars = "^1.6.0"
scikit-learn = "^1.6.1"
griddler = {git = "https://github.com/CDCgov/pygriddler.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
